# swifi

./: Cargo.toml  README.md  rustfmt.toml
src/: cli.rs  lib.rs  server.rs  speed_test.rs  test.rs
tests/: cli_flags.rs
